$Header$
===============================================================

127	Luke Howard <lukeh@padl.com>

	* added support for "referrals" and "restart"
	  options to ldap.conf
	* fixed up RPM Makefiles to build libnss_ldap
	* added "timelimit" and "bind_timelimit"
	  directives to ldap.conf
	* fixed bug with dereferencing aliases
	* preliminary support for profiles; recognise
	  profile semantics in ldap-nss.c/util.c
	* parity with pam_ldap; "ssl" directive in
	  ldap.conf can now specify "yes" or
	  "start_tls" for Start TLS
	* hopefully fixed Berkeley DB include 
	  mess in util.c
	* fixed leaks in util.c, dnsconfig.c
	* accept on/yes/true for boolean configuration
	  values
 
126	Luke Howard <lukeh@padl.com>

125	Luke Howard <lukeh@padl.com>

	* fixed up Linux Makefiles to build libnss_ldap

124	Luke Howard <lukeh@padl.com>

	* patch from nalin@redhat.com for StartTLS
	* fixed up indenting

123	Luke Howard <lukeh@padl.com>

	* rolled in BUG#52 branch with fixes for AIX

122.BZ52.2	Luke Howard <lukeh@padl.com>

	* included ldap-schema.c; omitted from previous
	  checkpoint

122.BZ52.1	Luke Howard <lukeh@padl.com>

	* preliminary fix for BUG#52 (support for different
	  naming contexts for each map)
	* fixed bug in enumerating services map

122	Luke Howard <lukeh@padl.com>

	* fixed BUG#50 (check return value of ldap_simple_bind())

121	Luke Howard <lukeh@padl.com>

	* fixed BUG#49 (fix acknowledged race condition)

120	Luke Howard <lukeh@padl.com>

	* added Makefile.aix and exports.aix (forgot)

119	Luke Howard <lukeh@padl.com>

	* patch from Gabor Gombas <gombasg@inf.elte.hu>
	  to support AIX implementation of BIND IRS

118	Luke Howard <lukeh@padl.com>

	* Makefile.RPM.openldap2 from Joe Little

117	Luke Howard <lukeh@padl.com>

	* permanently ignore SIGPIPE when using SSL. This
	  bug should be fixed properly.

116	Luke Howard <lukeh@padl.com>

	* added irs-nss.diff and README.IRS from Emile
	  Heitor

115	Luke Howard <lukeh@padl.com>
